--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,7 @@
-name: "Martin Saveski"
-title: "Assistant Professor, University of Washington"
-email: "msaveski [AT] uw.edu"
+name: "Seung-Yun Baek"
+title: "Phd Candidate, Tokyo University of Agriculture and Technology"
+email: "altaica09 [AT] gmail.com"
 profile_pic: "/assets/profile-pics/SU_small.jpg"
-twitter: "https://twitter.com/msaveski"
-linkedin: "https://www.linkedin.com/in/msaveski"
-github: "https://github.com/msaveski"
-google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
-google_analystics_tracking_id: 'UA-46778883-1'
+github: "https://github.com/seungyun100.github.io"
+research gate: "https://www.researchgate.net/profile/Seungyun-Baek-3"
+google_scholar: "https://scholar.google.co.kr/citations?user=kaaMERsAAAAJ&hl=en"
