--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,7 +1,7 @@
 name: "Seung-Yun Baek"
 title: "Phd Candidate, Tokyo University of Agriculture and Technology"
 email: "altaica09 [AT] gmail.com"
-profile_pic: "/assets/profile-pics/SU_small.jpg"
+profile_pic: "/assets/profile-pics/Seungyun-pic.png"
 github: "https://github.com/seungyun100.github.io"
 research gate: "https://www.researchgate.net/profile/Seungyun-Baek-3"
 google_scholar: "https://scholar.google.co.kr/citations?user=kaaMERsAAAAJ&hl=en"
