--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -2,6 +2,6 @@ name: "Seung-Yun Baek"
 title: "Phd Candidate, Tokyo University of Agriculture and Technology"
 email: "altaica09 [AT] gmail.com"
 profile_pic: "/assets/profile-pics/Seungyun-pic.png"
-github: "https://github.com/seungyun100.github.io"
+github: "https://github.com/seungyun100"
 research gate: "https://www.researchgate.net/profile/Seungyun-Baek-3"
 google_scholar: "https://scholar.google.co.kr/citations?user=kaaMERsAAAAJ&hl=en"
